--- a/gyroArduino/Tetrahedron/readme
+++ b/gyroArduino/Tetrahedron/readme
@@ -1,1 +1,1 @@
-https://github.com/celalcakiroglu/Qt/tree/master/Tetrahedron/Tetrahedron
+original author https://github.com/celalcakiroglu/Qt/tree/master/Tetrahedron/Tetrahedron
